<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pdf_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DGSM Schlaftagebuch"
        android:layout_marginTop="20px"
        android:textSize="15px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <TableLayout
            android:id="@+id/table_evening_data"
            android:layout_width="383px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center">
            <TableRow
                android:id="@+id/header_evening_data"
                android:background="@color/colorPrimary"
                android:layout_height="500px"
                android:layout_marginTop="15px"
                android:paddingTop="5px"
                android:paddingBottom="5px"
                >
                <TextView
                    android:text="@string/date"
                    android:layout_width="45px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="7px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/daily_performance"
                    android:layout_width="58px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/daily_fatigue"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/daily_sleep"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/daily_alcohol"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/bedtime"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />
                <TextView
                    android:text="@string/evening_condition"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"

                    />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/table_morning_data"
            android:layout_width="448px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center">

            <TableRow
                android:id="@+id/header_morning_data"
                android:background="@color/colorPrimary"
                android:layout_height="500px"
                android:layout_marginTop="15px"
                android:paddingTop="5px"
                android:paddingBottom="5px"

                >
                <TextView
                    android:text="@string/sleep_well"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="4px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/morning_feeling"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/sleep_start"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/times_awake"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    />
                <TextView
                    android:text="@string/sleep_end"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/out_of_bed"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/medication"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
                <TextView
                    android:text="@string/sleep_time"
                    android:layout_width="56px"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8px"
                    android:paddingLeft="2px"
                    android:paddingRight="2px"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>