<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="serif"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:padding="2dp"
                android:text="@string/disclaimer_sleepdiary"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:padding="2dp"
                android:text="@string/one_last_thing"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/privacy_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:padding="2dp"
                android:text="@string/safety_call"
                android:textAlignment="center"
                android:textColor="@color/colorEvening"
                android:textStyle="italic" />


            <CheckBox
                android:id="@+id/opt_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/opt_in" />

            <Button
                android:id="@+id/lets_go_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#0000"
                android:text="@string/lets_go"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>