<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Switch
        android:id="@+id/should_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:gravity="left|start"
        android:splitTrack="false"
        android:text="@string/notif_setting_txt"
        android:textAlignment="viewStart"
        android:textOff="O"
        android:textOn="I"
        android:theme="@style/Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <TextView
        android:id="@+id/morning_at"
        style="@style/FillWordStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:text="@string/morning_at"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/morning_notification"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/should_notify" />

    <TimePicker
        android:id="@+id/morning_notification"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/should_notify" />

    <TextView
        android:id="@+id/evening_at"
        style="@style/FillWordStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:text="@string/evening_at"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/evening_notification"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morning_at" />

    <TimePicker
        android:id="@+id/evening_notification"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/morning_notification" />

    <Button
        android:id="@+id/personal_info_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#0000"
        android:text="@string/personal_info_word"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#0000"
        android:text="@string/privacy"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>